# detic

./: .gitmodules  pyproject.toml  setup.py
