[project]
name = "detic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3"
dependencies = []

[build-system]
requires = ["setuptools<82"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["detic"]

[tool.setuptools]
include-package-data = false